Revision history for Perl extension Crypt::NaCl::Sodium.

{{$NEXT}}

0.06   2015-05-20 22:37:45
    Build changes to locate libsodium.a if pkg-config fails
    Fix tests failure on OpenBSD which comes with Math::BigInt v1.89_01
    Fix warning on older perls that warned on ref as lvalue in substr

0.05   2015-05-19 22:37:36
    Statically linked libsodium.a

0.04   2015-05-18 00:31:37
    BSDs do not come with mempcpy
    Fix some compiler warnings

0.03   2015-05-12 22:26:26
    Add Alien::Sodium to configure requirements
    Correct label for crypto_scalarmult->base

0.02   2015-05-12 01:33:29
    Add provides for indexing .pod files
    Minor documentaton fixes

0.01   2015-05-12 00:43:48
	Initial version.
